@@ -95,6 +95,8 @@ t/9bug/37895-inconsistent-jemplate-version.t
 t/9bug/53967-compiler-double-dot-path-fail.t
 t/9bug/53453-make-Jemplate-slice-like-TT-slice.t
 t/9bug/53454-array-range-operator.t
+t/9bug/37570-list-for-lists.t
+t/9bug/43809-capture-implementation.t
 tests/Makefile
 tests/README
 tests/bin/daemon
